[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/CustomTimer.gd" type="Script" id=1]

[node name="CustomTimer" type="Node"]
script = ExtResource( 1 )

[node name="NormalSpeed" type="Timer" parent="."]
wait_time = 7.0

[node name="FastSpeed" type="Timer" parent="."]

[node name="UltraSpeed" type="Timer" parent="."]

[node name="DebugSpeed" type="Timer" parent="."]

